2004-09-02  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/mscoupled.cpp: Fixed bug in microstrip coupled
	characteristic impedances computation.

2004-09-01  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msline.cpp: Put some more Hammerstad equations
	into extra functions because used in single as well as coupled
	microstrip models.

	* microstrip/mscoupled.cpp: Implemented quasi-static model by
	Kirschning and Jansen.  Also implemented dispersion models for
	dielectric constants.  Dispersion for characteristic impedances
	still missing...

2004-08-31  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msline.cpp: Fixed a bug in Hammerstad model.

2004-08-30  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/mscorner.cpp, microstrip/msmbend.cpp: Fixed
	frequency limitations.

2004-08-22  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msline.cpp: Implemented noise calculation.

	* attenuator.cpp, isolator.cpp: 'Temp' property added for noise
	analysis.

	* microstrip/msline.cpp: Fixed quasi-static formulas when
	metal thickness turns out to be zero.

2004-08-20  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/mscoupled.cpp: Implemented DC model of microstrip
	coupled lines.

	* microstrip/msline.cpp: Implemented DC model of microstrip
	line.

2004-08-19  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msline.cpp: Moved loss calculations into an
	extra function of the microstrip line class.

	* microstrip/mscoupled.h (class mscoupled): Implemented
	parallel coupled microstrip model by Hammerstad and Jensen.

	* microstrip/msopen.cpp: Fixed DC model.

	* microstrip/msline.cpp: Implemented DC short for now.

2004-08-17  Stefan Jahn  <stefan@lkcc.org>

	* microstrip/msstep.cpp: Fixed apparent bug in microstrip
	impedance step implementation (log10 instead of log).
	Also  renamed 'Model' into 'MSModel' and 'DispModel' into
	'MSDispModel'.

	* microstrip/msline.cpp (analyseDispersion): Removed some
	debug messages.

	* microstrip/msgap.cpp: Revisited microstrip gap