@@ -687,3 +687,17 @@
  pages   = {59-61},
  local   = "{01130287.pdf}",
 }
+
+@article{Alexopoulos,
+ author  = {Nicolaos G. Alexopoulos and Shih-Chang Wu},
+ title   = "{Frequency-Independent Equivalent Circuit Model for Microstrip
+             Open-End and Gap Discontinuities}",
+ journal = IEEETMTT,
+ note    = "{Short Papers}",
+ volume  = {42},
+ number  = {7},
+ month   = jul,
+ year    = {1994},
+ pages   = {1268-1272},
+ local   = "{00299766.pdf}",
+}
